parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    INDEXOF
    JOIN
    LENGHT
    POP
    PUSH
    false
    true

Grammar

Rule 0     S' -> s
Rule 1     s -> block
Rule 2     block -> block instruccion
Rule 3     block -> instruccion
Rule 4     instruccion -> print
Rule 5     instruccion -> ifinstruction
Rule 6     instruccion -> whileinstruction
Rule 7     instruccion -> declaration
Rule 8     instruccion -> arraydeclaration
Rule 9     instruccion -> forinstruction
Rule 10    instruccion -> assignment
Rule 11    instruccion -> breakstmt
Rule 12    instruccion -> continuestmt
Rule 13    instruccion -> functionstmt
Rule 14    instruccion -> call
Rule 15    instruccion -> returnstmt
Rule 16    instruccion -> interfacecreation
Rule 17    instruccion -> switch_statement
Rule 18    instruccion -> interdeclaration
Rule 19    print -> CONSOLE PUNTO LOG PARIZQ expressionList PARDER PUNTOCOMA
Rule 20    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
Rule 21    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE ifinstruction
Rule 22    ifinstruction -> IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 23    switch_statement -> SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement default_case LLAVEDER
Rule 24    switch_statement -> SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement LLAVEDER
Rule 25    cases_statement -> cases_statement case_statement
Rule 26    cases_statement -> case_statement
Rule 27    case_statement -> CASE expression DOSPUNTOS block
Rule 28    default_case -> DEFAULT DOSPUNTOS block
Rule 29    whileinstruction -> WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
Rule 30    operadores -> ID MAS MAS
Rule 31    forinstruction -> FOR PARIZQ declaration expression PUNTOCOMA operadores PARDER LLAVEIZQ block LLAVEDER
Rule 32    declaration -> VAR ID DOSPUNTOS type IGUAL expression PUNTOCOMA
Rule 33    declaration -> VAR ID IGUAL expression PUNTOCOMA
Rule 34    declaration -> CONST ID DOSPUNTOS type IGUAL expression PUNTOCOMA
Rule 35    arraydeclaration -> VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expression PUNTOCOMA
Rule 36    interdeclaration -> VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ interfaceContent LLAVEDER PUNTOCOMA
Rule 37    interfaceContent -> interfaceContent COMA ID DOSPUNTOS expression
Rule 38    interfaceContent -> ID DOSPUNTOS expression
Rule 39    assignment -> ID IGUAL expression PUNTOCOMA
Rule 40    returnstmt -> RETURN expression PUNTOCOMA
Rule 41    returnstmt -> RETURN PUNTOCOMA
Rule 42    call -> ID PARIZQ expressionList PARDER PUNTOCOMA
Rule 43    call -> ID PARIZQ PARDER PUNTOCOMA
Rule 44    functionstmt -> FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
Rule 45    funcparams -> PARIZQ paramsList PARDER
Rule 46    funcparams -> PARIZQ PARDER
Rule 47    interfacecreation -> INTERFACE ID LLAVEIZQ attributeList LLAVEDER PUNTOCOMA
Rule 48    attributeList -> attributeList ID DOSPUNTOS type PUNTOCOMA
Rule 49    attributeList -> ID DOSPUNTOS type PUNTOCOMA
Rule 50    paramsList -> paramsList COMA ID DOSPUNTOS type
Rule 51    paramsList -> ID DOSPUNTOS type
Rule 52    functype -> DOSPUNTOS type
Rule 53    functype -> <empty>
Rule 54    breakstmt -> BREAK PUNTOCOMA
Rule 55    continuestmt -> CONTINUE PUNTOCOMA
Rule 56    type -> NUMBER
Rule 57    type -> FLOAT
Rule 58    type -> STRING
Rule 59    type -> BOOL
Rule 60    expression -> expression MAS expression
Rule 61    expression -> expression MENOS expression
Rule 62    expression -> expression POR expression
Rule 63    expression -> expression DIVIDIDO expression
Rule 64    expression -> expression MOD expression
Rule 65    expression -> MENOS expression
Rule 66    expression -> expression MENOR expression
Rule 67    expression -> expression MAYOR expression
Rule 68    expression -> expression MENORIG expression
Rule 69    expression -> expression MAYORIG expression
Rule 70    expression -> expression IGUALDAD expression
Rule 71    expression -> expression DIF expression
Rule 72    expression -> expression AND expression
Rule 73    expression -> expression OR expression
Rule 74    expression -> NOT expression
Rule 75    expression -> PARIZQ expression PARDER
Rule 76    expression -> PARSEINT PARIZQ expression PARDER
Rule 77    expression -> PARSEFLOAT PARIZQ expression PARDER
Rule 78    expression -> expression PUNTO TOSTRING PARIZQ PARDER
Rule 79    expression -> ID PUNTO TOSTRING PARIZQ PARDER
Rule 80    expression -> ID PUNTO UPCASE PARIZQ PARDER
Rule 81    expression -> ID PUNTO LCASE PARIZQ PARDER
Rule 82    expression -> TYPEOF expression
Rule 83    expression -> expression TERN expression DOSPUNTOS expression
Rule 84    expression -> ENTERO
Rule 85    expression -> CADENA
Rule 86    expression -> DECIMAL
Rule 87    expression -> BOOLEANO
Rule 88    expression -> listArray
Rule 89    expression -> CORIZQ expressionList CORDER
Rule 90    expressionList -> expressionList COMA expression
Rule 91    expressionList -> expression
Rule 92    expression -> ID PARIZQ expressionList PARDER
Rule 93    expression -> ID PARIZQ PARDER
Rule 94    listArray -> ID CORIZQ expression CORDER
Rule 95    listArray -> ID

Terminals, with rules where they appear

AND                  : 72
BOOL                 : 59
BOOLEANO             : 87
BREAK                : 54
CADENA               : 85
CASE                 : 27
COMA                 : 37 50 90
CONSOLE              : 19
CONST                : 34
CONTINUE             : 55
CORDER               : 35 89 94
CORIZQ               : 35 89 94
DECIMAL              : 86
DEFAULT              : 28
DIF                  : 71
DIVIDIDO             : 63
DOSPUNTOS            : 27 28 32 34 35 36 37 38 48 49 50 51 52 83
ELSE                 : 20 21
ENTERO               : 84
FLOAT                : 57
FOR                  : 31
FUNC                 : 44
ID                   : 30 32 33 34 35 36 36 37 38 39 42 43 44 47 48 49 50 51 79 80 81 92 93 94 95
IF                   : 20 21 22
IGUAL                : 32 33 34 35 36 39
IGUALDAD             : 70
INDEXOF              : 
INTERFACE            : 47
JOIN                 : 
LCASE                : 81
LENGHT               : 
LLAVEDER             : 20 20 21 22 23 24 29 31 36 44 47
LLAVEIZQ             : 20 20 21 22 23 24 29 31 36 44 47
LOG                  : 19
MAS                  : 30 30 60
MAYOR                : 67
MAYORIG              : 69
MENOR                : 66
MENORIG              : 68
MENOS                : 61 65
MOD                  : 64
NOT                  : 74
NUMBER               : 56
OR                   : 73
PARDER               : 19 20 21 22 23 24 29 31 42 43 45 46 75 76 77 78 79 80 81 92 93
PARIZQ               : 19 20 21 22 23 24 29 31 42 43 45 46 75 76 77 78 79 80 81 92 93
PARSEFLOAT           : 77
PARSEINT             : 76
POP                  : 
POR                  : 62
PUNTO                : 19 78 79 80 81
PUNTOCOMA            : 19 31 32 33 34 35 36 39 40 41 42 43 47 48 49 54 55
PUSH                 : 
RETURN               : 40 41
STRING               : 58
SWITCH               : 23 24
TERN                 : 83
TOSTRING             : 78 79
TYPEOF               : 82
UPCASE               : 80
VAR                  : 32 33 35 36
WHILE                : 29
error                : 
false                : 
true                 : 

Nonterminals, with rules where they appear

arraydeclaration     : 8
assignment           : 10
attributeList        : 47 48
block                : 1 2 20 20 21 22 27 28 29 31 44
breakstmt            : 11
call                 : 14
case_statement       : 25 26
cases_statement      : 23 24 25
continuestmt         : 12
declaration          : 7 31
default_case         : 23
expression           : 20 21 22 23 24 27 29 31 32 33 34 35 37 38 39 40 60 60 61 61 62 62 63 63 64 64 65 66 66 67 67 68 68 69 69 70 70 71 71 72 72 73 73 74 75 76 77 78 82 83 83 83 90 91 94
expressionList       : 19 42 89 90 92
forinstruction       : 9
funcparams           : 44
functionstmt         : 13
functype             : 44
ifinstruction        : 5 21
instruccion          : 2 3
interdeclaration     : 18
interfaceContent     : 36 37
interfacecreation    : 16
listArray            : 88
operadores           : 31
paramsList           : 45 50
print                : 4
returnstmt           : 15
s                    : 0
switch_statement     : 17
type                 : 32 34 35 48 49 50 51 52
whileinstruction     : 6

Parsing method: LALR

state 0

    (0) S' -> . s
    (1) s -> . block
    (2) block -> . block instruccion
    (3) block -> . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . whileinstruction
    (7) instruccion -> . declaration
    (8) instruccion -> . arraydeclaration
    (9) instruccion -> . forinstruction
    (10) instruccion -> . assignment
    (11) instruccion -> . breakstmt
    (12) instruccion -> . continuestmt
    (13) instruccion -> . functionstmt
    (14) instruccion -> . call
    (15) instruccion -> . returnstmt
    (16) instruccion -> . interfacecreation
    (17) instruccion -> . switch_statement
    (18) instruccion -> . interdeclaration
    (19) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PUNTOCOMA
    (20) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (21) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE ifinstruction
    (22) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (29) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (32) declaration -> . VAR ID DOSPUNTOS type IGUAL expression PUNTOCOMA
    (33) declaration -> . VAR ID IGUAL expression PUNTOCOMA
    (34) declaration -> . CONST ID DOSPUNTOS type IGUAL expression PUNTOCOMA
    (35) arraydeclaration -> . VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expression PUNTOCOMA
    (31) forinstruction -> . FOR PARIZQ declaration expression PUNTOCOMA operadores PARDER LLAVEIZQ block LLAVEDER
    (39) assignment -> . ID IGUAL expression PUNTOCOMA
    (54) breakstmt -> . BREAK PUNTOCOMA
    (55) continuestmt -> . CONTINUE PUNTOCOMA
    (44) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (42) call -> . ID PARIZQ expressionList PARDER PUNTOCOMA
    (43) call -> . ID PARIZQ PARDER PUNTOCOMA
    (40) returnstmt -> . RETURN expression PUNTOCOMA
    (41) returnstmt -> . RETURN PUNTOCOMA
    (47) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER PUNTOCOMA
    (23) switch_statement -> . SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement default_case LLAVEDER
    (24) switch_statement -> . SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement LLAVEDER
    (36) interdeclaration -> . VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ interfaceContent LLAVEDER PUNTOCOMA

    CONSOLE         shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    VAR             shift and go to state 22
    CONST           shift and go to state 24
    FOR             shift and go to state 25
    ID              shift and go to state 23
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FUNC            shift and go to state 28
    RETURN          shift and go to state 29
    INTERFACE       shift and go to state 30
    SWITCH          shift and go to state 31

    s                              shift and go to state 1
    block                          shift and go to state 2
    instruccion                    shift and go to state 3
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    whileinstruction               shift and go to state 6
    declaration                    shift and go to state 7
    arraydeclaration               shift and go to state 8
    forinstruction                 shift and go to state 9
    assignment                     shift and go to state 10
    breakstmt                      shift and go to state 11
    continuestmt                   shift and go to state 12
    functionstmt                   shift and go to state 13
    call                           shift and go to state 14
    returnstmt                     shift and go to state 15
    interfacecreation              shift and go to state 16
    switch_statement               shift and go to state 17
    interdeclaration               shift and go to state 18

state 1

    (0) S' -> s .



state 2

    (1) s -> block .
    (2) block -> block . instruccion
    (4) instruccion -> . print
    (5) instruccion -> . ifinstruction
    (6) instruccion -> . whileinstruction
    (7) instruccion -> . declaration
    (8) instruccion -> . arraydeclaration
    (9) instruccion -> . forinstruction
    (10) instruccion -> . assignment
    (11) instruccion -> . breakstmt
    (12) instruccion -> . continuestmt
    (13) instruccion -> . functionstmt
    (14) instruccion -> . call
    (15) instruccion -> . returnstmt
    (16) instruccion -> . interfacecreation
    (17) instruccion -> . switch_statement
    (18) instruccion -> . interdeclaration
    (19) print -> . CONSOLE PUNTO LOG PARIZQ expressionList PARDER PUNTOCOMA
    (20) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE LLAVEIZQ block LLAVEDER
    (21) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER ELSE ifinstruction
    (22) ifinstruction -> . IF PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (29) whileinstruction -> . WHILE PARIZQ expression PARDER LLAVEIZQ block LLAVEDER
    (32) declaration -> . VAR ID DOSPUNTOS type IGUAL expression PUNTOCOMA
    (33) declaration -> . VAR ID IGUAL expression PUNTOCOMA
    (34) declaration -> . CONST ID DOSPUNTOS type IGUAL expression PUNTOCOMA
    (35) arraydeclaration -> . VAR ID DOSPUNTOS type CORIZQ CORDER IGUAL expression PUNTOCOMA
    (31) forinstruction -> . FOR PARIZQ declaration expression PUNTOCOMA operadores PARDER LLAVEIZQ block LLAVEDER
    (39) assignment -> . ID IGUAL expression PUNTOCOMA
    (54) breakstmt -> . BREAK PUNTOCOMA
    (55) continuestmt -> . CONTINUE PUNTOCOMA
    (44) functionstmt -> . FUNC ID funcparams functype LLAVEIZQ block LLAVEDER
    (42) call -> . ID PARIZQ expressionList PARDER PUNTOCOMA
    (43) call -> . ID PARIZQ PARDER PUNTOCOMA
    (40) returnstmt -> . RETURN expression PUNTOCOMA
    (41) returnstmt -> . RETURN PUNTOCOMA
    (47) interfacecreation -> . INTERFACE ID LLAVEIZQ attributeList LLAVEDER PUNTOCOMA
    (23) switch_statement -> . SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement default_case LLAVEDER
    (24) switch_statement -> . SWITCH PARIZQ expression PARDER LLAVEIZQ cases_statement LLAVEDER
    (36) interdeclaration -> . VAR ID DOSPUNTOS ID IGUAL LLAVEIZQ interfaceContent LLAVEDER PUNTOCOMA

    $end            reduce using rule 1 (s -> block .)
    CONSOLE         shift and go to state 19
    IF              shift and go to state 20
    WHILE           shift and go to state 21
    VAR             shift and go to state 22
    CONST           shift and go to state 24
    FOR             shift and go to state 25
    ID              shift and go to state 23
    BREAK           shift and go to state 26
    CONTINUE        shift and go to state 27
    FUNC            shift and go to state 28
    RETURN          shift and go to state 29
    INTERFACE       shift and go to state 30
    SWITCH          shift and go to state 31

    instruccion                    shift and go to state 32
    print                          shift and go to state 4
    ifinstruction                  shift and go to state 5
    whileinstruction               shift and go to state 6
    declaration                    shift and go to state 7
    arraydeclaration               shift and go to state 8
    forinstruction                 shift and go to state 9
    assignment                     shift and go to state 10
    breakstmt                      shift and go to state 11
    continuestmt                   shift and go to state 12
    functionstmt                   shift and go to state 13
    call                           shift and go to state 14
    returnstmt                     shift and go to state 15
    interfacecreation              shift and go to state 16
    switch_statement               shift and go to state 17
    interdeclaration               shift and go to state 18

state 3

    (3) block -> instruccion .

    CONSOLE         reduce using rule 3 (block -> instruccion .)
    IF              reduce using rule 3 (block -> instruccion .)
    WHILE           reduce using rule 3 (block -> instruccion .)
    VAR             reduce using rule 3 (block -> instruccion .)
    CONST           reduce using rule 3 (block -> instruccion .)
    FOR             reduce using rule 3 (block -> instruccion .)
    ID              reduce using rule 3 (block -> instruccion .)
    BREAK           reduce using rule 3 (block -> instruccion .)
    CONTINUE        reduce using rule 3 (block -> instruccion .)
    FUNC            reduce using rule 3 (block -> instruccion .)
    RETURN          reduce using rule 3 (block -> instruccion .)
    INTERFACE       reduce using rule 3 (block -> instruccion .)
    SWITCH          reduce using rule 3 (block -> instruccion .)
    $end            reduce using rule 3 (block -> instruccion .)
    LLAVEDER        reduce using rule 3 (block -> instruccion .)
    DEFAULT         reduce using rule 3 (block -> instruccion .)
    CASE            reduce using rule 3 (block -> instruccion .)


state 4

    (4) instruccion -> print .

    CONSOLE         reduce using rule 4 (instruccion -> print .)
    IF              reduce using rule 4 (instruccion -> print .)
    WHILE           reduce using rule 4 (instruccion -> print .)
    VAR             reduce using rule 4 (instruccion -> print .)
    CONST           reduce using rule 4 (instruccion -> print .)
    FOR             reduce using rule 4 (instruccion -> print .)
    ID              reduce using rule 4 (instruccion -> print .)
    BREAK           reduce using rule 4 (instruccion -> print .)
    CONTINUE        reduce using rule 4 (instruccion -> print .)
    FUNC            reduce using rule 4 (instruccion -> print .)
    RETURN          reduce using rule 4 (instruccion -> print .)
    INTERFACE       reduce using rule 4 (instruccion -> print .)
    SWITCH          reduce using rule 4 (instruccion -> print .)
    $end            reduce using rule 4 (instruccion -> print .)
    LLAVEDER        reduce using rule 4 (instruccion -> print .)
    DEFAULT         reduce using rule 4 (instruccion -> print .)
    CASE            reduce using rule 4 (instruccion -> print .)


state 5

    (5) instruccion -> ifinstruction .

    CONSOLE         reduce using rule 5 (instruccion -> ifinstruction .)
    IF              reduce using rule 5 (instruccion -> ifinstruction .)
    WHILE           reduce using rule 5 (instruccion -> ifinstruction .)
    VAR             reduce using rule 5 (instruccion -> ifinstruction .)
    CONST           reduce using rule 5 (instruccion -> ifinstruction .)
    FOR             reduce using rule 5 (instruccion -> ifinstruction .)
    ID              reduce using rule 5 (instruccion -> ifinstruction .)
    BREAK           reduce using rule 5 (instruccion -> ifinstruction .)
    CONTINUE        reduce using rule 5 (instruccion -> ifinstruction .)
    FUNC            reduce using rule 5 (instruccion -> ifinstruction .)
    RETURN          reduce using rule 5 (instruccion -> ifinstruction .)
    INTERFACE       reduce using rule 5 (instruccion -> ifinstruction .)
    SWITCH          reduce using rule 5 (instruccion -> ifinstruction .)
    $end            reduce using rule 5 (instruccion -> ifinstruction .)
    LLAVEDER        reduce using rule 5 (instruccion -> ifinstruction .)
    DEFAULT         reduce using rule 5 (instruccion -> ifinstruction .)
    CASE            reduce using rule 5 (instruccion -> ifinstruction .)


state 6

    (6) instruccion -> whileinstruction .

    CONSOLE         reduce using rule 6 (instruccion -> whileinstruction .)
    IF              reduce using rule 6 (instruccion -> whileinstruction .)
    WHILE           reduce using rule 6 (instruccion -> whileinstruction .)
    VAR             reduce using rule 6 (instruccion -> whileinstruction .)
    CONST           reduce using rule 6 (instruccion -> whileinstruction .)
    FOR             reduce using rule 6 (instruccion -> whileinstruction .)
    ID              reduce using rule 6 (instruccion -> whileinstruction .)
    BREAK           reduce using rule 6 (instruccion -> whileinstruction .)
    CONTINUE        reduce using rule 6 (instruccion -> whileinstruction .)
    FUNC            reduce using rule 6 (instruccion -> whileinstruction .)
    RETURN          reduce using rule 6 (instruccion -> whileinstruction .)
    INTERFACE       reduce using rule 6 (instruccion -> whileinstruction .)
    SWITCH          reduce using rule 6 (instruccion -> whileinstruction .)
    $end            reduce using rule 6 (instruccion -> whileinstruction .)
    LLAVEDER        reduce using rule 6 (instruccion -> whileinstruction .)
    DEFAULT         reduce using rule 6 (instruccion -> whileinstruction .)
    CASE            reduce using rule 6 (instruccion -> whileinstruction .)


state 7

    (7) instruccion -> declaration .

    CONSOLE         reduce using rule 7 (instruccion -> declaration .)
    IF              reduce using rule 7 (instruccion -> declaration .)
    WHILE           reduce using rule 7 (instruccion -> declaration .)
    VAR             reduce using rule 7 (instruccion -> declaration .)
    CONST           reduce using rule 7 (instruccion -> declaration .)
    FOR             reduce using rule 7 (instruccion -> declaration .)
    ID              reduce using rule 7 (instruccion -> declaration .)
    BREAK           reduce using rule 7 (instruccion -> declaration .)
    CONTINUE        reduce using rule 7 (instruccion -> declaration .)
    FUNC            reduce using rule 7 (instruccion -> declaration .)
    RETURN          reduce using rule 7 (instruccion -> declaration .)
    INTERFACE       reduce using rule 7 (instruccion -> declaration .)
    SWITCH          reduce using rule 7 (instruccion -> declaration .)
    $end            reduce using rule 7 (instruccion -> declaration .)
    LLAVEDER        reduce using rule 7 (instruccion -> declaration .)
    DEFAULT         reduce using rule 7 (instruccion -> declaration .)
    CASE            reduce using rule 7 (instruccion -> declaration .)


state 8

    (8) instruccion -> arraydeclaration .

    CONSOLE         reduce using rule 8 (instruccion -> arraydeclaration .)
    IF              reduce using rule 8 (instruccion -> arraydeclaration .)
    WHILE           reduce using rule 8 (instruccion -> arraydeclaration .)
    VAR             reduce using rule 8 (instruccion -> arraydeclaration .)
    CONST           reduce using rule 8 (instruccion -> arraydeclaration .)
    FOR             reduce using rule 8 (instruccion -> arraydeclaration .)
    ID              reduce using rule 8 (instruccion -> arraydeclaration .)
    BREAK           reduce using rule 8 (instruccion -> arraydeclaration .)
    CONTINUE        reduce using rule 8 (instruccion -> arraydeclaration .)
    FUNC            reduce using rule 8 (instruccion -> arraydeclaration .)
    RETURN          reduce using rule 8 (instruccion -> arraydeclaration .)
    INTERFACE       reduce using rule 8 (instruccion -> arraydeclaration .)
    SWITCH          reduce using rule 8 (instruccion -> arraydeclaration .)
    $end            reduce using rule 8 (instruccion -> arraydeclaration .)
    LLAVEDER        reduce using rule 8 (instruccion -> arraydeclaration .)
    DEFAULT         reduce using rule 8 (instruccion -> arraydeclaration .)
    CASE            reduce using rule 8 (instruccion -> arraydeclaration .)


state 9

    (9) instruccion -> forinstruction .

    CONSOLE         reduce using rule 9 (instruccion -> forinstruction .)
    IF              reduce using rule 9 (instruccion -> forinstruction .)
    WHILE           reduce using rule 9 (instruccion -> forinstruction .)
    VAR             reduce using rule 9 (instruccion -> forinstruction .)
    CONST           reduce using rule 9 (instruccion -> forinstruction .)
    FOR             reduce using rule 9 (instruccion -> forinstruction .)
    ID              reduce using rule 9 (instruccion -> forinstruction .)
    BREAK           reduce using rule 9 (instruccion -> forinstruction .)
    CONTINUE        reduce using rule 9 (instruccion -> forinstruction .)
    FUNC            reduce using rule 9 (instruccion -> forinstruction .)
    RETURN          reduce using rule 9 (instruccion -> forinstruction .)
    INTERFACE       reduce using rule 9 (instruccion -> forinstruction .)
    SWITCH          reduce using rule 9 (instruccion -> forinstruction .)
    $end            reduce using rule 9 (instruccion -> forinstruction .)
    LLAVEDER        reduce using rule 9 (instruccion -> forinstruction .)
    DEFAULT         reduce using rule 9 (instruccion -> forinstruction .)
    CASE            reduce using rule 9 (instruccion -> forinstruction .)


state 10

    (10) instruccion -> assignment .

    CONSOLE         reduce using rule 10 (instruccion -> assignment .)
    IF              reduce using rule 10 (instruccion -> assignment .)
    WHILE           reduce using rule 10 (instruccion -> assignment .)
    VAR             reduce using rule 10 (instruccion -> assignment .)
    CONST           reduce using rule 10 (instruccion -> assignment .)
    FOR             reduce using rule 10 (instruccion -> assignment .)
    ID              reduce using rule 10 (instruccion -> assignment .)
    BREAK           reduce using rule 10 (instruccion -> assignment .)
    CONTINUE        reduce using rule 10 (instruccion -> assignment .)
    FUNC            reduce using rule 10 (instruccion -> assignment .)
    RETURN          reduce using rule 10 (instruccion -> assignment .)
    INTERFACE       reduce using rule 10 (instruccion -> assignment .)
    SWITCH          reduce using rule 10 (instruccion -> assignment .)
    $end            reduce using rule 10 (instruccion -> assignment .)
    LLAVEDER        reduce using rule 10 (instruccion -> assignment .)
    DEFAULT         reduce using rule 10 (instruccion -> assignment .)
    CASE            reduce using rule 10 (instruccion -> assignment .)


state 11

    (11) instruccion -> breakstmt .

    CONSOLE         reduce using rule 11 (instruccion -> breakstmt .)
    IF              reduce using rule 11 (instruccion -> breakstmt .)
    WHILE           reduce using rule 11 (instruccion -> breakstmt .)
    VAR             reduce using rule 11 (instruccion -> breakstmt .)
    CONST           reduce using rule 11 (instruccion -> breakstmt .)
    FOR             reduce using rule 11 (instruccion -> breakstmt .)
    ID              reduce using rule 11 (instruccion -> breakstmt .)
    BREAK           reduce using rule 11 (instruccion -> breakstmt .)
    CONTINUE        reduce using rule 11 (instruccion -> breakstmt .)
    FUNC            reduce using rule 11 (instruccion -> breakstmt .)
    RETURN          reduce using rule 11 (instruccion -> breakstmt .)
    INTERFACE       reduce using rule 11 (instruccion -> breakstmt .)
    SWITCH          reduce using rule 11 (instruccion -> breakstmt .)
    $end            reduce using rule 11 (instruccion -> breakstmt .)
    LLAVEDER        reduce using rule 11 (instruccion -> breakstmt .)
    DEFAULT         reduce using rule 11 (instruccion -> breakstmt .)
    CASE            reduce using rule 11 (instruccion -> breakstmt .)


state 12

    (12) instruccion -> continuestmt .

    CONSOLE         reduce using rule 12 (instruccion -> continuestmt .)
    IF              reduce using rule 12 (instruccion -> continuestmt .)
    WHILE           reduce using rule 12 (instruccion -> continuestmt .)
    VAR             reduce using rule 12 (instruccion -> continuestmt .)
    CONST           reduce using rule 12 (instruccion -> continuestmt .)
    FOR             reduce using rule 12 (instruccion -> continuestmt .)
    ID              reduce using rule 12 (instruccion -> continuestmt .)
    BREAK           reduce using rule 12 (instruccion -> continuestmt .)
    CONTINUE        reduce using rule 12 (instruccion -> continuestmt .)
    FUNC            reduce using rule 12 (instruccion -> continuestmt .)
    RETURN          reduce using rule 12 (instruccion -> continuestmt .)
    INTERFACE       reduce using rule 12 (instruccion -> continuestmt .)
    SWITCH          reduce using rule 12 (instruccion -> continuestmt .)
    $end            reduce using rule 12 (instruccion -> continuestmt .)
    LLAVEDER        reduce using rule 12 (instruccion -> continuestmt .)
    DEFAULT         reduce using rule 12 (instruccion -> continuestmt .)
    CASE            reduce using rule 12 (instruccion -> continuestmt .)


state 13

    (13) instruccion -> functionstmt .

    CONSOLE         reduce using rule 13 (instruccion -> functionstmt .)
    IF              reduce using rule 13 (instruccion -> functionstmt .)
    WHILE           reduce using rule 13 (instruccion -> functionstmt .)
    VAR             reduce using rule 13 (instruccion -> functionstmt .)
    CONST           reduce using rule 13 (instruccion -> functionstmt .)
    FOR             reduce using rule 13 (instruccion -> functionstmt .)
    ID              reduce using rule 13 (instruccion -> functionstmt .)
    BREAK           reduce using rule 13 (instruccion -> functionstmt .)
    CONTINUE        reduce using rule 13 (instruccion -> functionstmt .)
    FUNC            reduce using rule 13 (instruccion -> functionstmt .)
    RETURN          reduce using rule 13 (instruccion -> functionstmt .)
    INTERFACE       reduce using rule 13 (instruccion -> functionstmt .)
    SWITCH          reduce using rule 13 (instruccion -> functionstmt .)
    $end            reduce using rule 13 (instruccion -> functionstmt .)
    LLAVEDER        reduce using rule 13 (instruccion -> functionstmt .)
    DEFAULT         reduce using rule 13 (instruccion -> functionstmt .)
    CASE            reduce using rule 13 (instruccion -> functionstmt .)


state 14

    (14) instruccion -> call .

    CONSOLE         reduce using rule 14 (instruccion -> call .)
    IF              reduce using rule 14 (instruccion -> call .)
    WHILE           reduce using rule 14 (instruccion -> call .)
    VAR             reduce using rule 14 (instruccion -> call .)
    CONST           reduce using rule 14 (instruccion -> call .)
    FOR             reduce using rule 14 (instruccion -> call .)
    ID              reduce using rule 14 (instruccion -> call .)
    BREAK           reduce using rule 14 (instruccion -> call .)
    CONTINUE        reduce using rule 14 (instruccion -> call .)
    FUNC            reduce using rule 14 (instruccion -> call .)
    RETURN          reduce using rule 14 (instruccion -> call .)
    INTERFACE       reduce using rule 14 (instruccion -> call .)
    SWITCH          reduce using rule 14 (instruccion -> call .)
    $end            reduce using rule 14 (instruccion -> call .)
    LLAVEDER        reduce using rule 14 (instruccion -> call .)
    DEFAULT         reduce using rule 14 (instruccion -> call .)
    CASE            reduce using rule 14 (instruccion -> call .)


state 15

    (15) instruccion -> returnstmt .

    CONSOLE         reduce using rule 15 (instruccion -> returnstmt .)
    IF              reduce using rule 15 (instruccion -> returnstmt .)
    WHILE           reduce using rule 15 (instruccion -> returnstmt .)
    VAR             reduce using rule 15 (instruccion -> returnstmt .)
    CONST           reduce using rule 15 (instruccion -> returnstmt .)
    FOR             reduce using rule 15 (instruccion -> returnstmt .)
    ID              reduce using rule 15 (instruccion -> returnstmt .)
    BREAK           reduce using rule 15 (instruccion -> returnstmt .)
    CONTINUE        reduce using rule 15 (instruccion -> returnstmt .)
    FUNC            reduce using rule 15 (instruccion -> returnstmt .)
    RETURN          reduce using rule 15 (instruccion -> returnstmt .)
    INTERFACE       reduce using rule 15 (instruccion -> returnstmt .)
    SWITCH          reduce using rule 15 (instruccion -> returnstmt .)
    $end            reduce using rule 15 (instruccion -> returnstmt .)
    LLAVEDER        reduce using rule 15 (instruccion -> returnstmt .)
    DEFAULT         reduce using rule 15 (instruccion -> returnstmt .)
    CASE            reduce using rule 15 (instruccion -> returnstmt .)


state 16

    (16) instruccion -> interfacecreation .

    CONSOLE         reduce using rule 16 (instruccion -> interfacecreation .)
    IF              reduce using rule 16 (instruccion -> interfacecreation .)
    WHILE           reduce using rule 16 (instruccion -> interfacecreation .)
    VAR             reduce using rule 16 (instruccion -> interfacecreation .)
    CONST           reduce using rule 16 (instruccion -> interfacecreation .)
    FOR             reduce using rule 16 (instruccion -> interfacecreation .)
    ID              reduce using rule 16 (instruccion -> interfacecreation .)
    BREAK           reduce using rule 16 (instruccion -> interfacecreation .)
    CONTINUE        reduce using rule 16 (instruccion -> interfacecreation .)
    FUNC            reduce using rule 16 (instruccion -> interfacecreation .)
    RETURN          reduce using rule 16 (instruccion -> interfacecreation .)
    INTERFACE       reduce using rule 16 (instruccion -> interfacecreation .)
    SWITCH          reduce using rule 16 (instruccion -> interfacecreation .)
    $end            reduce using rule 16 (instruccion -> interfacecreation .)
    LLAVEDER        reduce using rule 16 (instruccion -> interfacecreation .)
    DEFAULT         reduce using rule 16 (instruccion -> interfacecreation .)
    CASE            reduce using rule 16 (instruccion -> interfacecreation .)


state 17

    (17) instruccion -> switch_statement .
